[tool.poetry]
name = "cthulhu-tools"
version = "0.1.0"
description = ""
authors = ["ktai98 <tai98.k@gmail.com>"]
readme = "README.md"
packages = [
    {include = "cthulhu_tools"}
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.13.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["cthulhu_tools/*.py"]
fix = true
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ANN001", "ANN201", "E4", "E7", "E9", "ERA001", "F", "I"]
ignore = ["ANN101", "E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.12"
namespace_packages = true
files = ["cthulhu_tools"]
strict = true
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true
disallow_untyped_decorators = true